--- a/Configs/Home/.config/neofetch/config.conf
+++ b/Configs/Home/.config/neofetch/config.conf
@@ -111,7 +111,7 @@ battery_display="off"
 disk_display="on"
 
 image_backend="ascii"
-#image_source="$HOME/XeroAscii"
+image_source="$HOME/XeroAscii"
 image_size="small"
 image_loop="off"
 
