--- a/Configs/Home/.config/Trolltech.conf
+++ b/Configs/Home/.config/Trolltech.conf
@@ -1,6 +1,6 @@
 [qt]
 GUIEffects=none
-KDE\contrast=4
+KDE\contrast=10
 KWinPalette\activeBackground=#2f343f
 KWinPalette\activeBlend=#2f343f
 KWinPalette\activeForeground=#d3dae3
@@ -11,7 +11,7 @@ KWinPalette\inactiveBlend=#2f343f
 KWinPalette\inactiveForeground=#666a73
 KWinPalette\inactiveFrame=#181b28
 KWinPalette\inactiveTitleBtnBg=#181b28
-Palette\active=#d3dae3, #1e2233, #323853, #272c42, #0e1017, #151823, #d3dae3, #ffffff, #c3c7d1, #161925, #181b28, #0a0c11, #c50ed2, #fefefe, #5294e2, #7cb7ff, #1f2333, #000000, #353945, #d3dae3, #d3dae3
-Palette\disabled=#555965, #1d2031, #313752, #272c40, #0d0f16, #141722, #545863, #ffffff, #545765, #151823, #171a26, #0a0b10, #171a26, #555965, #294162, #374d6c, #1e2131, #000000, #353945, #d3dae3, #d3dae3
-Palette\inactive=#d3dae3, #1e2233, #323853, #272c42, #0e1017, #151823, #d3dae3, #ffffff, #c3c7d1, #161925, #181b28, #0a0c11, #510b5a, #d3dae3, #5294e2, #7cb7ff, #1f2333, #000000, #353945, #d3dae3, #d3dae3
+Palette\active=#d3dae3, #1e2233, #3e4668, #303650, #08090e, #141722, #d3dae3, #ffffff, #c3c7d1, #161925, #181b28, #06070a, #c50ed2, #fefefe, #5294e2, #7cb7ff, #1f2333, #000000, #353945, #d3dae3, #aaaaac
+Palette\disabled=#555965, #1d2031, #3e4667, #2f354f, #08090d, #131620, #545863, #ffffff, #545765, #151823, #171a26, #06070a, #171a26, #555965, #294162, #374d6c, #1e2131, #000000, #353945, #d3dae3, #aaaaac
+Palette\inactive=#d3dae3, #1e2233, #3e4668, #303650, #08090e, #141722, #d3dae3, #ffffff, #c3c7d1, #161925, #181b28, #06070a, #510b5a, #d3dae3, #5294e2, #7cb7ff, #1f2333, #000000, #353945, #d3dae3, #aaaaac
 font="Noto Sans,10,-1,0,50,0,0,0,0,0"
